--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="description" content="Современный объект с детским садом в Инорсе." />
+    <meta name="keywords" content="купить, квартира, уфа, жилой, комплекс, новостройка" />
   </head>
   <body>
     <noscript>
